[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Map1.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 93.6586, 50, 0, 0, 0, 0, 532.683, 50, 0, 0, 0, 0, 822.439, 50 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 110, 520 )
z_index = 1

[node name="Map1" parent="." instance=ExtResource( 3 )]

[node name="MonsterPath" type="Path2D" parent="."]
position = Vector2( -16.6667, -30 )
scale = Vector2( 1.13889, 3 )
curve = SubResource( 1 )

[node name="MonsterSpawnLocation" type="PathFollow2D" parent="MonsterPath"]
position = Vector2( 93.6586, 50 )
rotation = 9.72176e-007

[node name="MobSpawnTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="MobSpawnTimer" to="." method="_on_MobSpawnTimer_timeout"]
